<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".About"
    tools:showIn="@layout/activity_about">

    <item

        android:id="@+id/action_web"
        android:orderInCategory="100"
        android:title="@string/web"
        app:showAsAction="never"
    />

    <item
        android:id="@+id/action_home"
        android:orderInCategory="101"
        android:title="@string/home"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_logOut"
        android:orderInCategory="102"
        android:title="@string/LogOut"
        app:showAsAction="never"
        />

    <item
        android:id="@+id/action_options"
        android:orderInCategory="0"
        android:title="@string/options"
        app:showAsAction="always"
        />



</menu>