<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustomerInfo">

    <Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tool"
        >


    </Toolbar>

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="40dp"
    android:paddingLeft="30dp"
    android:gravity="center_vertical|center_horizontal"
    >

    <TextView
        android:id="@+id/name"
        android:textStyle="normal|bold"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:paddingTop="5dip"
        android:text="@string/Name"
        />

    <TextView
        android:id="@+id/username"
        android:layout_below="@+id/name"
        android:textStyle="normal|bold"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:paddingTop="5dip"
        android:text="@string/Username"
        />
    <TextView
        android:id="@+id/password"
        android:textStyle="normal|bold"
        android:layout_below="@+id/username"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:paddingTop="5dip"
        android:text="@string/Password"
        />

    <TextView
        android:id="@+id/address"
        android:textStyle="normal|bold"
        android:layout_below="@+id/password"
        android:layout_width="80dp"
        android:layout_height="30dp"
        android:paddingTop="5dip"
        android:text="@string/Address"
        />

    <TextView
        android:id="@+id/creditCard"
        android:textStyle="normal|bold"
        android:layout_below="@+id/address"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:paddingTop="5dip"
        android:text="@string/CreditCard"

        />

    <EditText
        android:id="@+id/nameText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:textSize="12dp"
        android:paddingLeft="15dip"
        android:layout_toRightOf="@id/name"
        android:text="" />

    <EditText
        android:id="@+id/usernameText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dip"
        android:textSize="12dp"
        android:layout_below="@+id/nameText"
        android:paddingTop="5dip"
        android:layout_toRightOf="@id/username"
        android:text="" />

    <EditText
        android:id="@+id/passwordText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:paddingLeft="15dip"
        android:textSize="12dp"
        android:layout_below="@+id/usernameText"
        android:paddingTop="5dip"
        android:layout_toRightOf="@id/username"
        android:text="" />

    <EditText
        android:id="@+id/addressText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:paddingTop="5dip"
        android:paddingLeft="15dip"
        android:layout_below="@+id/passwordText"
        android:layout_toRightOf="@id/address"
        android:text="" />

    <EditText
        android:id="@+id/creditCardText"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textSize="12dp"
        android:paddingTop="5dip"
        android:paddingLeft="15dip"
        android:layout_below="@+id/addressText"
        android:layout_toRightOf="@id/address"
        android:text="" />

    <TextView
        android:id="@+id/phoneNumber"
        android:textStyle="normal|bold"
        android:layout_below="@+id/creditCard"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:paddingTop="5dip"
        android:text="@string/phoneNumber"

        />

    <EditText
        android:id="@+id/phoneNumberText"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:paddingTop="5dip"
        android:textSize="12dp"
        android:layout_below="@+id/creditCardText"
        android:layout_toRightOf="@id/phoneNumber"
        android:text="" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_below="@+id/phoneNumberText"
        android:onClick="onClickOK"
        android:text="@string/OK" />





</RelativeLayout>
</android.support.constraint.ConstraintLayout>