<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Cart">

    <Toolbar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tool"
        >


    </Toolbar>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="0dp">


        <TextView
            android:id="@+id/completeOrder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:textStyle="normal|bold"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/completeOrder" />




        <ScrollView
            android:layout_width="300dp"
            android:layout_below="@+id/completeOrder"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:id="@+id/scroll"
            >


            <EditText
                android:id="@+id/order"
                android:layout_width="300dp"
                android:textStyle="normal|bold"
                android:layout_height="wrap_content"
                android:ems="10"
                android:textSize="15sp"
                android:inputType="textMultiLine" />

        </ScrollView>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:id="@+id/imageMenu"
            app:srcCompat="@drawable/pizza"
            android:onClick="onClickAdd"
            android:layout_below="@+id/scroll"
            />

        <TextView
            android:id="@+id/addMore"
            android:layout_below="@+id/imageMenu"
            android:layout_width="100dp"
            android:layout_height="40dp"

            android:paddingTop="5dip"
            android:paddingLeft="30dp"
            android:background="#FFFFFF"
            android:textStyle="normal|bold"
            android:text="@string/AddMore"
            />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical|center_horizontal"
            android:layout_below="@+id/scroll"
            android:textStyle="normal|bold"
            android:text="@string/total" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ccInfo"
            android:text="@string/ccInfo"
            android:background="@drawable/grey"
            android:onClick="ccInfo"
            android:textColor="#FFFFFF"
            android:layout_below="@+id/textView2"
            android:layout_toRightOf="@id/addMore"
            android:layout_centerHorizontal="true"


            />

        <Button
            android:id="@+id/placeOrder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/placeOrder"
            android:layout_below="@+id/ccInfo"
            android:background="@drawable/grey"
            android:textColor="#FFFFFF"
            android:layout_toRightOf="@id/addMore"
            android:layout_centerHorizontal="true"
            />
        <!--android:onClick="onClickPlace"-->


    </RelativeLayout>



</android.support.constraint.ConstraintLayout>