<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Checkout">

    <LinearLayout

        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ilovepizza"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        android:paddingBottom="30dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="174dp">

        <LinearLayout
            android:id="@+id/contian"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/name"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:background="#FFFFFF"
                    android:paddingTop="5dip"
                    android:text="@string/Name"
                    android:textColor="#DE000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/name"
                    android:background="#FFFFFF"
                    android:paddingTop="5dip"
                    android:text="@string/Username"
                    android:textColor="#DE000000"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/password"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/username"
                    android:background="#FFFFFF"
                    android:paddingTop="5dip"
                    android:text="@string/Password"
                    android:textColor="#DE000000"
                    android:textSize="15sp" />
                />

                <TextView
                    android:id="@+id/address"
                    android:layout_width="80dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/password"
                    android:background="#FFFFFF"
                    android:paddingTop="5dip"
                    android:text="@string/Address"
                    android:textColor="#DE000000"
                    android:textSize="15sp" />
                />

                <TextView
                    android:id="@+id/creditCard"
                    android:layout_width="match_parent"
                    android:layout_height="35dp"
                    android:layout_below="@+id/address"
                    android:background="#FFFFFF"
                    android:paddingTop="5dip"
                    android:text="@string/CreditCard"
                    android:textColor="#DE000000"
                    android:textSize="15sp" />
                />

                <TextView
                    android:id="@+id/phoneNumber"
                    android:layout_width="100dp"
                    android:layout_height="35dp"
                    android:layout_below="@+id/creditCard"
                    android:background="#FFFFFF"
                    android:paddingTop="5dip"
                    android:text="@string/phoneNumber"
                    android:textColor="#DE000000"
                    android:textSize="15sp" />/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <EditText

                    android:id="@+id/nameText"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_weight="0.52"
                    android:background="@drawable/textfiled_img"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/usernameText"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_below="@+id/name"
                    android:layout_marginEnd="65dp"
                    android:layout_weight="0.52"
                    android:background="@drawable/textfiled_img"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:paddingLeft="4dp"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/passwordText"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_weight="0.52"
                    android:background="@drawable/textfiled_img"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/addressText"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_weight="0.52"
                    android:background="@drawable/textfiled_img"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/creditCardText"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_weight="0.52"
                    android:background="@drawable/textfiled_img"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:textSize="14dp" />


                <EditText
                    android:id="@+id/phoneNumberText"
                    android:layout_width="200dp"
                    android:layout_height="35dp"
                    android:layout_alignParentStart="true"

                    android:layout_alignParentTop="true"
                    android:layout_weight="0.52"
                    android:background="@drawable/textfiled_img"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:textSize="14dp" />


            </LinearLayout>


        </LinearLayout>

        <Button
            android:id="@+id/confirm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:background="@drawable/grey"
            android:text="@string/Update"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/greenpizza"
            android:gravity="center"
            android:onClick="onClickCart"
            android:text="@string/Checkout"
            android:textColor="#FFFFFF"
            android:textSize="15sp" />


    </LinearLayout>


</android.support.constraint.ConstraintLayout>