<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn= "@layout/activity_main">

    <LinearLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/ilovepizza"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">


        <ImageView
            android:id="@+id/imagePizza"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_alignParentTop="true"
            android:src="@drawable/pizza"
            android:onClick="onClickPizza"
            />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imagePizza"
            android:layout_centerHorizontal="true"
            android:background="#FFFFFF"
            android:textColor="#000000"
            android:gravity="center_horizontal"
            android:text="Welcome to Pizzeria Vetri!"
            android:textStyle="normal"
            android:textSize="20dp"
             />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#FFFFFF"
            android:orientation="horizontal">


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/u"
                    android:textStyle="normal"
                    android:layout_width="80dp"
                    android:textColor="#000000"
                    android:layout_height="35dp"
                    android:textSize="15sp"
                    android:paddingTop="5dip"
                    android:text="@string/Username"
                    />
                <TextView
                    android:id="@+id/p"
                    android:textStyle="normal"
                    android:textColor="#000000"
                    android:layout_below="@+id/u"
                    android:layout_width="80dp"
                    android:textSize="15sp"
                    android:layout_height="35dp"
                    android:paddingTop="5dip"
                    android:text="@string/Password"
                    />






            </RelativeLayout>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/userName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:background="@drawable/textfiled_img"
                    android:onClick="onClickUsername"
                    android:ems="10"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:textSize="14dp" />

                <EditText
                    android:id="@+id/Password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/userName"
                    android:background="@drawable/textfiled_img"
                    android:onClick="onClickUser"
                    android:ems="10"
                    android:gravity="center"
                    android:imeOptions="actionNext"
                    android:inputType="textCapCharacters"
                    android:textSize="14dp"
                    />




            </RelativeLayout>





        </LinearLayout>




        <Button
            android:id="@+id/button4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/greenmedium"
            android:text="@string/Sign"
            android:textColor="#FFFFFF"
            android:onClick="onClickSign"
            tools:layout_editor_absoluteX="117dp"
            tools:layout_editor_absoluteY="384dp" />



    </LinearLayout>




</android.support.constraint.ConstraintLayout>